feat: SpecClassMapper